--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">PulseUp</string>
-    <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -9,7 +8,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="heading_app_start">Your way to a healthy body and strong mind</string>
     <string name="test_lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit,\n sed do eiusmod tempor incididunt ut labore et dolore\n magna aliqua.</string>
@@ -26,4 +24,5 @@
     <string name="nickname">Nickname</string>
     <string name="hint_your_nickname">Your nickname</string>
     <string name="hint_your_full_name">Your full name</string>
+    <string name="hint_your_weight">Your weight</string>
 </resources>
